# cpp-game-agent

./: CMakeLists.txt  README.md
characters/: behaviour.json  persona.json
examples/: main.cpp
include/cpp_game_agent/: Agent.hpp  AgentAction.hpp  AgentReply.hpp  Behaviour.hpp  GroqBackend.hpp  Memory.hpp  Persona.hpp  ToolDefinition.hpp
src/: Agent.cpp  GroqBackend.cpp
